# prawler

./: Makefile  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: getting-started.md
docs/development/: architecture.md  contributing.md  decisions.md
docs/usage/: commands.md  outputs.md  pipelines-filters.md  reproducibility.md
src/prawler/: __init__.py
src/prawler/cli/: app.py  options.py
src/prawler/cli/commands/: __init__.py  comments.py  input.py  posts.py  search.py  user.py
src/prawler/client/: __init__.py  reddit_praw.py
src/prawler/crawler/: __init__.py  comment.py  post.py  redditor.py
src/prawler/model/: __init__.py  comment.py  post.py  redditor.py
src/prawler/output/: __init__.py  base.py  formatters.py  registry.py  sinks.py
src/prawler/pipeline/: filters.py  stage.py  transforms.py
src/prawler/reader/: __init__.py  reader.py
