[project]
name = "praw-cli"
version = "0.6.0"
description = "Composable Reddit crawler CLI with lazy pipelines, powerful filtering, reproducible datasets, and flexible output formats."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Othon H." }
]
keywords = [
    "reddit",
    "crawler",
    "cli",
    "praw",
    "dataset",
    "data-science",
    "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "praw>=8.0.2",
    "tenacity>=9.1.4",
    "typer[all]>=0.12.0",
]
[project.urls]
Repository = "https://github.com/othonhugo/prawler"
Bug-Tracker = "https://github.com/othonhugo/prawler/issues"
Documentation = "https://github.com/othonhugo/prawler#documentation"

[project.scripts]
prawler = "prawler.cli:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 200

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
